<resources>
    <string name="app_name">Vert</string>

    //login screen

    <string name="mobilenumber">Mobile Number</string>
    <string name="or">OR</string>
    <string name="next">Next</string>
    <string name="gmail">Gmail </string>
    <string name="loading">Loading </string>


    //Home screen

    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="oneway">One Way</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="roundtrip">Round Trip</string>
    <string name="checkinternet">Check Your Internet</string>
    <string name="settingforinternet">Please check your Internet Settings -> Internet Permission -> Enable</string>

    //verification Screen

    <string name="resendotp">Resend OTP</string>
    <string name="toastOtp">Please Enter OTP Number</string>

    //Navigation bar

    <string name="bookflight">Book Flight</string>
    <string name="mybooking">My Booking</string>
    <string name="cancelledbook">Cancelled Booking</string>
    <string name="inbox">Inbox</string>
    <string name="help">Help</string>
    <string name="shareapp">Share App</string>
    <string name="aboutus">About Us</string>

    //Profile Screen
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="email">Email Id</string>
    <string name="submit">Submit</string>


    //Contact User Screen
    <string name="contactname">Contact Name</string>
    <string name="contactemail">Contact Email</string>
    <string name="book">Book</string>
    <string name="addpayment">ADD Payment</string>
    <string name="price">Price : 2300</string>
    <string name="tickconfrm">Your Ticket Confirmation Will Send to your Email</string>


    //onewayBookScreen
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="btroundtrip">Round Trip Book</string>
    <string name="btbook">Book</string>
    <string name="name">Name</string>
    <string name="pound">Pounds</string>


    //roundtrip Screen

    <string name="returndate">Return Date</string>


    <string-array name="array_seats">

        <item>1</item>

        <item>2</item>

        <item>3</item>

        <item>4</item>

        <item>5</item>

    </string-array>


    //Payment List Screen

    <string name="cardholdername">Card Holder Name</string>
    <string name="cardnumber">Card Number</string>
    <string name="expmonth">Exp Month</string>
    <string name="expyear">Exp Year</string>
    <string name="cvv">CVV</string>


    //My Booking Screen

    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="nobook">NO Booking</string>
    <string name="title_activity_ongoing_screen_detail">OngoingScreenDetail</string>


    //Ongoing Detail Screen

    <string name="cancelbooking">Cancel Booking</string>
    <string name="close">Close</string>


    //pilot

    //Pilot Booking

    <string-array name="navigation_drawer_items_array">
        <item>Booking</item>
        <item>My Trips</item>
        <item>Contact Vert</item>
        <item>Help</item>
        <item>About Us</item>
        <item>Share App</item>
    </string-array>
    <string name="accept">Accept</string>


    //Pilot Profile

    <string name="employeeid">Employee Id</string>

    //contact vert

    <string name="message">Message</string>
    <string name="send">Send</string>
</resources>
