<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bookflight"
            android:title="@string/bookflight" />
        <item
            android:id="@+id/nav_mybooking"
            android:title="@string/mybooking" />
        <item
            android:id="@+id/nav_cancelledbook"
            android:title="@string/cancelledbook" />
        <item
            android:id="@+id/nav_inbox"
            android:title="@string/inbox" />

            <item
                android:id="@+id/nav_help"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_shareapp"
                android:title="@string/shareapp" />
        <item
                android:id="@+id/nav_aboutus"
                android:title="@string/aboutus" />

    </group>
</menu>
