<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vert.vert.activity.ProfileScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="@dimen/onetwenty"
        android:layout_height="@dimen/onetwenty"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@mipmap/ic_vert_launcher"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/ed_name"
        style="@style/CustomThemebk"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic">

        <EditText
            android:id="@+id/ed_username"
            style="@style/CustomThemebk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:hint="@string/contactname"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:textColor="@android:color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/textsize_ed"
            app:layout_constraintBottom_toTopOf="@+id/ed_password"
            app:layout_constraintLeft_toRightOf="@+id/spinner"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/ed_mobile"
        style="@style/CustomThemebk"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_name">

        <EditText
            android:id="@+id/ed_mobilenumber"
            style="@style/CustomThemebk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:hint="@string/mobilenumber"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:textColor="@android:color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/textsize_ed"
            app:layout_constraintBottom_toTopOf="@+id/ed_password"
            app:layout_constraintLeft_toRightOf="@+id/spinner"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ed_email"
        style="@style/CustomThemebk"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:hintTextAppearance="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_mobile">

        <EditText
            android:id="@+id/ed_email_id"
            style="@style/CustomThemebk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:textColor="@android:color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/textsize_ed"
            app:layout_constraintBottom_toTopOf="@+id/ed_password"
            app:layout_constraintLeft_toRightOf="@+id/spinner"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email" />



</android.support.constraint.ConstraintLayout>

    </ScrollView>


    <Button
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
